syntax = "proto3";
option go_package="./;pb";
package pb;

message UserModel{
  // @inject_tag: json:"id" form:"id"
  uint32 id = 1;
  // @inject_tag: json:"username" form:"username"
  string user_name = 2;
  // @inject_tag: json:"token" form:"token"
  string token = 3;
}

message UserRequest {
  // @inject_tag: json:"user_name" form:"user_name"
  string  user_name = 1;
  // @inject_tag: json:"password" form:"password"
  string password = 2;
  // @inject_tag: json:"password_confirm" form:"password_confirm"
  string  password_confirm = 3;
}

message UserResponse {
  // @inject_tag: json:"user_detail" form:"user_detail"
  UserModel user_detail = 1;
  // @inject_tag: json:"code" form:"code"
  uint32  code = 2;
}

service UserService {
  rpc UserLogin(UserRequest) returns (UserResponse){}
  rpc UserRegister(UserRequest) returns(UserResponse){}
}